Se realizo el primer piloto, imagenes de whatsapp agregadas

--- a/index.html
+++ b/index.html
@@ -416,7 +416,9 @@
         <h2>Nuestras Tazas</h2>
         <div class="products-grid">
             <div class="product-card">
-                <div class="product-image">☕</div>
+                <div class="product-image">
+                    <img src="img/taza-tacos.jpg" alt="taza personalizada con diseno de tacos" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Clásica</h3>
                     <p>Perfecta para café o té. Diseño personalizado en cerámica de alta calidad.</p>
@@ -426,7 +428,9 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image">🎨</div>
+                <div class="product-image">
+                    <img src="img/taza-pareja-5.jpeg" alt="taza de pareja con agarraderra de color" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Full Color</h3>
                     <p>Impresión a todo color con acabado brillante. Ideal para fotografías.</p>
@@ -436,7 +440,9 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image">💼</div>
+                <div class="product-image">
+                    <img src="img/varias-tazas.jpg" alt="varias tazas personalizadas" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Corporativa</h3>
                     <p>Perfecta para empresas. Logo y branding profesional.</p>
@@ -446,7 +452,9 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image">✨</div>
+                <div class="product-image">
+                    <img src="img/taza-pareja-2.jpg" alt="taza magica" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Mágica</h3>
                     <p>Cambia de color con el calor. Revela tu diseño con líquidos calientes.</p>
@@ -456,7 +464,9 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image">❤️</div>
+                <div class="product-image">
+                    <img src="img/varias-tazas-2.jpeg" alt="tazas de regalo" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Regalo</h3>
                     <p>Detalles especiales para ocasiones únicas. Incluye empaque premium.</p>
@@ -466,7 +476,9 @@
             </div>
 
             <div class="product-card">
-                <div class="product-image">🏆</div>
+                <div class="product-image">
+                    <img src="img/taza-decorada.jpg" alt="tazas decorada" style="width:80%; height:auto;">
+                </div>
                 <div class="product-info">
                     <h3>Taza Premium</h3>
                     <p>Máxima calidad y durabilidad. Acabado profesional garantizado.</p>
