--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>copx.mx - Tazas Personalizadas</title>
+    <title>copx.mx - Tazas Personalizadas - Edición San Valentín</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bitter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #D35400;
-            --secondary: #E67E22;
-            --dark: #1A1A1A;
-            --cream: #FFF8E7;
-            --accent: #C0392B;
-            --light: #FDF5E6;
+            --primary: #E91E63;
+            --secondary: #FF6B9D;
+            --dark: #1A0A0F;
+            --cream: #FFF0F5;
+            --accent: #C2185B;
+            --light: #FFE4E9;
         }
 
         * {
@@ -28,31 +28,60 @@
             background: var(--cream);
             color: var(--dark);
             overflow-x: hidden;
+            position: relative;
+        }
+
+        /* Corazones flotantes decorativos */
+        body::before,
+        body::after {
+            content: '💕';
+            position: fixed;
+            font-size: 2rem;
+            opacity: 0.1;
+            animation: floatHearts 15s ease-in-out infinite;
+            z-index: 0;
+        }
+
+        body::before {
+            top: 10%;
+            left: 5%;
+            animation-delay: 0s;
+        }
+
+        body::after {
+            top: 60%;
+            right: 8%;
+            animation-delay: 7s;
+        }
+
+        @keyframes floatHearts {
+            0%, 100% { transform: translate(0, 0) rotate(0deg); }
+            25% { transform: translate(20px, -20px) rotate(10deg); }
+            50% { transform: translate(0, -40px) rotate(-10deg); }
+            75% { transform: translate(-20px, -20px) rotate(10deg); }
         }
 
         /* Header */
         header {
-            background: var(--dark);
+            background: linear-gradient(135deg, var(--dark) 0%, #2D1520 100%);
             padding: 2rem 0;
             position: relative;
             overflow: hidden;
         }
 
         header::before {
-            content: '';
+            content: '❤️';
             position: absolute;
-            top: -50%;
-            right: -10%;
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, var(--primary) 0%, transparent 70%);
-            opacity: 0.1;
+            top: -20%;
+            right: -5%;
+            font-size: 25rem;
+            opacity: 0.05;
             animation: float 8s ease-in-out infinite;
         }
 
         @keyframes float {
             0%, 100% { transform: translate(0, 0) rotate(0deg); }
-            50% { transform: translate(-30px, 30px) rotate(180deg); }
+            50% { transform: translate(-30px, 30px) rotate(15deg); }
         }
 
         .header-content {
@@ -70,6 +99,7 @@
             letter-spacing: 0.1em;
             margin-bottom: 0.5rem;
             animation: slideIn 1s ease-out;
+            text-shadow: 2px 2px 4px rgba(233, 30, 99, 0.3);
         }
 
         @keyframes slideIn {
@@ -90,6 +120,13 @@
             animation: slideIn 1s ease-out 0.2s both;
         }
 
+        .tagline::before,
+        .tagline::after {
+            content: '💝';
+            margin: 0 0.5rem;
+            font-size: 1rem;
+        }
+
         /* Hero Section */
         .hero {
             background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
@@ -97,6 +134,17 @@
             text-align: center;
             color: white;
             position: relative;
+            overflow: hidden;
+        }
+
+        .hero::before {
+            content: '💖';
+            position: absolute;
+            top: 10%;
+            left: 10%;
+            font-size: 8rem;
+            opacity: 0.1;
+            animation: pulse 3s ease-in-out infinite;
         }
 
         .hero::after {
@@ -108,6 +156,11 @@
             height: 100px;
             background: var(--cream);
             clip-path: polygon(0 50%, 100% 0, 100% 100%, 0 100%);
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); opacity: 0.1; }
+            50% { transform: scale(1.1); opacity: 0.15; }
         }
 
         .hero-content {
@@ -122,6 +175,15 @@
             font-size: 3.5rem;
             margin-bottom: 1rem;
             animation: fadeInUp 1s ease-out 0.4s both;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .hero h2::before {
+            content: '💘 ';
+        }
+
+        .hero h2::after {
+            content: ' 💘';
         }
 
         @keyframes fadeInUp {
@@ -159,8 +221,12 @@
 
         .cta-button:hover {
             transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+            box-shadow: 0 15px 40px rgba(233, 30, 99, 0.4);
             background: var(--light);
+        }
+
+        .cta-button::before {
+            content: '💕 ';
         }
 
         /* Catalog Section */
@@ -168,6 +234,17 @@
             max-width: 1200px;
             margin: 6rem auto;
             padding: 0 2rem;
+            position: relative;
+        }
+
+        .catalog::before {
+            content: '💗';
+            position: absolute;
+            top: -50px;
+            right: 5%;
+            font-size: 5rem;
+            opacity: 0.08;
+            animation: floatHearts 10s ease-in-out infinite;
         }
 
         .catalog h2 {
@@ -177,6 +254,13 @@
             text-align: center;
             margin-bottom: 3rem;
             letter-spacing: 0.05em;
+        }
+
+        .catalog h2::before,
+        .catalog h2::after {
+            content: '❤️';
+            margin: 0 1rem;
+            color: var(--primary);
         }
 
         .products-grid {
@@ -189,9 +273,10 @@
             background: white;
             border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 40px rgba(233, 30, 99, 0.1);
             transition: all 0.4s ease;
             animation: fadeInUp 1s ease-out both;
+            border: 2px solid transparent;
         }
 
         .product-card:nth-child(1) { animation-delay: 0.2s; }
@@ -203,7 +288,8 @@
 
         .product-card:hover {
             transform: translateY(-10px) rotate(-1deg);
-            box-shadow: 0 20px 60px rgba(211, 84, 0, 0.3);
+            box-shadow: 0 20px 60px rgba(233, 30, 99, 0.3);
+            border-color: var(--secondary);
         }
 
         .product-image {
@@ -222,8 +308,17 @@
             position: absolute;
             width: 200%;
             height: 200%;
-            background: radial-gradient(circle, rgba(211, 84, 0, 0.1) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(233, 30, 99, 0.1) 0%, transparent 70%);
             animation: rotate 20s linear infinite;
+        }
+
+        .product-image::after {
+            content: '💕';
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            font-size: 2rem;
+            opacity: 0.3;
         }
 
         @keyframes rotate {
@@ -259,7 +354,7 @@
         .product-button {
             display: block;
             width: 100%;
-            background: var(--primary);
+            background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
             color: white;
             padding: 0.8rem;
             border: none;
@@ -272,20 +367,43 @@
         }
 
         .product-button:hover {
-            background: var(--accent);
+            background: linear-gradient(135deg, var(--accent) 0%, var(--primary) 100%);
             transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(233, 30, 99, 0.3);
         }
 
         /* Features Section */
         .features {
-            background: var(--dark);
+            background: linear-gradient(135deg, var(--dark) 0%, #2D1520 100%);
             padding: 5rem 2rem;
             margin-top: 6rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .features::before {
+            content: '💖';
+            position: absolute;
+            top: 5%;
+            left: 3%;
+            font-size: 10rem;
+            opacity: 0.05;
+        }
+
+        .features::after {
+            content: '💝';
+            position: absolute;
+            bottom: 5%;
+            right: 3%;
+            font-size: 10rem;
+            opacity: 0.05;
         }
 
         .features-content {
             max-width: 1200px;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
         }
 
         .features h2 {
@@ -306,14 +424,16 @@
         .feature {
             text-align: center;
             padding: 2rem;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 107, 157, 0.1);
             border-radius: 15px;
             transition: all 0.3s ease;
+            border: 1px solid rgba(255, 107, 157, 0.2);
         }
 
         .feature:hover {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 107, 157, 0.15);
             transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(233, 30, 99, 0.2);
         }
 
         .feature-icon {
@@ -340,6 +460,16 @@
             color: var(--cream);
             text-align: center;
             padding: 3rem 2rem;
+            position: relative;
+        }
+
+        footer::before {
+            content: '💗';
+            position: absolute;
+            top: 10%;
+            left: 10%;
+            font-size: 4rem;
+            opacity: 0.05;
         }
 
         footer h3 {
@@ -348,6 +478,13 @@
             color: var(--secondary);
             margin-bottom: 1rem;
             letter-spacing: 0.05em;
+        }
+
+        footer h3::before,
+        footer h3::after {
+            content: '💕';
+            margin: 0 0.5rem;
+            font-size: 1.5rem;
         }
 
         footer p {
