Se agregaron las imagenes en la poscion correcta y los precios correctos

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="products-grid">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/taza-tacos.jpg" alt="taza personalizada con diseno de tacos" style="width:80%; height:auto;">
+                    <img src="img/taza-decorada.jpg" alt="taza personalizada con diseno de tacos" style="width:80%; height:auto;">
                 </div>
                 <div class="product-info">
                     <h3>Taza Clásica</h3>
                     <p>Perfecta para café o té. Diseño personalizado en cerámica de alta calidad.</p>
-                    <div class="product-price">Desde $150</div>
+                    <div class="product-price">Desde $75</div>
                     <button class="product-button">Personalizar</button>
                 </div>
             </div>
@@ -54,24 +54,12 @@
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/varias-tazas.jpg" alt="varias tazas personalizadas" style="width:80%; height:auto;">
-                </div>
-                <div class="product-info">
-                    <h3>Taza Corporativa</h3>
-                    <p>Perfecta para empresas. Logo y branding profesional.</p>
-                    <div class="product-price">Desde $200</div>
-                    <button class="product-button">Personalizar</button>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
                     <img src="img/taza-pareja-2.jpg" alt="taza magica" style="width:80%; height:auto;">
                 </div>
                 <div class="product-info">
                     <h3>Taza Mágica</h3>
                     <p>Cambia de color con el calor. Revela tu diseño con líquidos calientes.</p>
-                    <div class="product-price">Desde $250</div>
+                    <div class="product-price">Desde $130</div>
                     <button class="product-button">Personalizar</button>
                 </div>
             </div>
@@ -82,21 +70,33 @@
                 </div>
                 <div class="product-info">
                     <h3>Taza Regalo</h3>
-                    <p>Detalles especiales para ocasiones únicas. Incluye empaque premium.</p>
-                    <div class="product-price">Desde $220</div>
+                    <p>Detalles especiales para ocasiones únicas. Incluye dulces premium.</p>
+                    <div class="product-price">Desde $150</div>
                     <button class="product-button">Personalizar</button>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
-                    <img src="img/taza-decorada.jpg" alt="tazas decorada" style="width:80%; height:auto;">
+                    <img src="img/termo-imagen.png" alt="tazas decorada" style="width:80%; height:auto;">
                 </div>
                 <div class="product-info">
-                    <h3>Taza Premium</h3>
+                    <h3>Termo</h3>
                     <p>Máxima calidad y durabilidad. Acabado profesional garantizado.</p>
-                    <div class="product-price">Desde $280</div>
+                    <div class="product-price">Desde $270</div>
                     <button class="product-button">Personalizar</button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="img/varias-tazas.jpg" alt="varias tazas personalizadas" style="width:80%; height:auto;">
+                </div>
+                <div class="product-info">
+                    <h3>Otros regalos</h3>
+                    <p>¿Buscas algo mas? pregunta con nosotros y lo hacemos realidad</p>
+                    <div class="product-price">.....</div>
+                    <button class="product-button">Ver más.</button>
                 </div>
             </div>
         </div>
